Bug 527018 - [refactoring] Replace use of Number constructors by valueOf
Change-Id: I2176addf3ff822dad5067f2a485e416f66a5dc90
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>